refactor: Fix helper name

--- a/addon/components/lt-body.hbs
+++ b/addon/components/lt-body.hbs
@@ -101,7 +101,7 @@
                   {{! template-lint-disable no-inline-styles }}
                   <td
                     style={{
-                      html-safe
+                      htmlSafe
                       (if column.width (concat "width: " column.width))
                     }}
                     class="lt-scaffolding"
