--- a/addon/components/lt-spanned-row.hbs
+++ b/addon/components/lt-spanned-row.hbs
@@ -1,5 +1,5 @@
 {{#if this.visible}}
-  <tr class="lt-row {{html-safe this.classes}}">
+  <tr class="lt-row {{htmlSafe this.classes}}">
     <td colspan={{this.colspan}}>
       {{yield this.yield}}
     </td>
