Document changes to sorting icons and icon component

--- a/tests/dummy/app/templates/cookbook/custom-row.hbs
+++ b/tests/dummy/app/templates/cookbook/custom-row.hbs
@@ -4,6 +4,7 @@
     "custom-row-table.js"
     "base-table.js"
     "custom-row-table.hbs"
+    "fa-icon-wrapper.hbs"
     "colored-row.js"
     "user-avatar.hbs"
     "table-loader.hbs"
