--- a/tests/dummy/app/templates/responsive.hbs
+++ b/tests/dummy/app/templates/responsive.hbs
@@ -6,6 +6,7 @@
     "responsive-table.hbs"
     "responsive-expanded-row.hbs"
     "row-toggle.hbs"
+    "fa-icon-wrapper.hbs"
     "user-avatar.hbs"
     "table-loader.hbs"
 }}>
